--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <script src="node_modules/angular/angular.js"></script>
   <script src="scripts/main.js"></script>
   <script src="components/myapp.js"></script>
+  <script src="components/detailapp.js"></script>
+  <script src="components/detailapp2.js"></script>
 </body>
 </html>
